--- a/RPSGame.xcodeproj/xcshareddata/xcschemes/RPSGame.xcscheme
+++ b/RPSGame.xcodeproj/xcshareddata/xcschemes/RPSGame.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6CB01E2C2382362900B6BC75"
+               BuildableName = "RPSGameTests.xctest"
+               BlueprintName = "RPSGameTests"
+               ReferencedContainer = "container:RPSGame.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
