--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language:
   - swift
 osx_image: xcode11.2
 script:
-  - xcodebuild -scheme RPSGame -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone X,OS=13.0' build test
+  - xcodebuild -scheme RPSGame -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8,OS=13.2.2' build test
 after_success:
   - bash <(curl -s https://codecov.io/bash)
